--- a/src/test/resources/config/config.qa.properties
+++ b/src/test/resources/config/config.qa.properties
@@ -4,5 +4,5 @@ headless=false
 incognito=false
 highlight=false
 
-username=mpsingh@gmail.com
-password=meeta@123
+username=dec2023@opencart.con
+password=Selenium@12345
