--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,10 @@
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
 						<suiteXmlFile>
-							src/test/resources/testrunners/testng_sanity.xml</suiteXmlFile>
+							src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
+<!--						<suiteXmlFile>-->
+<!--							src/test/resources/testrunners/testng_sanity.xml</suiteXmlFile>-->
+
 						<!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> -->
 					</suiteXmlFiles>
 					<argLine>
