--- a/pom.xml
+++ b/pom.xml
@@ -115,17 +115,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.20</version>
 
 				<configuration>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
+						<!--suppress UnresolvedMavenProperty -->
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 <!--						<suiteXmlFile>-->
-<!--							src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
+<!--							src/test/resources/testRunners/testng_regression.xml</suiteXmlFile>-->
 <!--						<suiteXmlFile>-->
-<!--							src/test/resources/testrunners/testng_sanity.xml</suiteXmlFile>-->
+<!--							src/test/resources/testRunners/testng_sanity.xml</suiteXmlFile>-->
 
 					</suiteXmlFiles>
 					<argLine>
